package gelf.view.components;

import javax.swing.JPanel;

/**
 * Panel
 */
public class Panel extends JPanel {

    
}