package gelf.view.composites;

import gelf.view.components.Panel;

/**
 * InfoBar
 */
public class InfoBar extends Panel {

    
}