package gelf.view.composites;

import gelf.view.components.Window;

/**
 * MainWindow
 */
public class MainWindow extends Window {

    
}