package gelf.view.composites;

import gelf.view.components.Panel;

/**
 * Outliner
 */
public class Outliner extends Panel {

    
}