package gelf.view.composites;

/**
 * TextEditor
 */
public class TextEditor extends ElementManipulator {

    
}