package gelf.view.composites;

/**
 * Visualizer
 */
public class Visualizer extends ElementManipulator {

    
}