package gelf.view.diagrams.components;

import java.awt.Component;

public interface Hoverable {

}
