package gelf.view.diagrams.type;

public abstract class Diagram {

}
